[gd_scene load_steps=15 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://arms.tscn" type="PackedScene" id=2]
[ext_resource path="res://rightArm.gd" type="Script" id=3]
[ext_resource path="res://leftArm.gd" type="Script" id=4]
[ext_resource path="res://upArm.gd" type="Script" id=5]
[ext_resource path="res://downArm.gd" type="Script" id=6]
[ext_resource path="res://zemin.tscn" type="PackedScene" id=7]
[ext_resource path="res://camera.gd" type="Script" id=8]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=9]
[ext_resource path="res://Ball.gd" type="Script" id=10]
[ext_resource path="res://FreeSans.ttf" type="DynamicFontData" id=11]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0666667, 0.509804, 0.611765, 1 )

[sub_resource type="Environment" id=2]
background_mode = 1
background_color = Color( 0.0666667, 0.509804, 0.611765, 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 11 )

[node name="Node" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 491.7
margin_top = 556.25
margin_right = 576.7
margin_bottom = 584.25
text = "connect"

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]

[node name="rightArm" parent="CanvasLayer" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )
script = ExtResource( 3 )

[node name="leftArm" parent="CanvasLayer" instance=ExtResource( 2 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -10, 0, 0 )
script = ExtResource( 4 )

[node name="upArm" parent="CanvasLayer" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -10 )
script = ExtResource( 5 )

[node name="downArm" parent="CanvasLayer" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 10 )
script = ExtResource( 6 )

[node name="zemin" parent="CanvasLayer" instance=ExtResource( 7 )]
transform = Transform( 4.1, 0, 0, 0, 1, 0, 0, 0, 4.1, 0, 5.6, 0 )

[node name="Camera1" type="InterpolatedCamera" parent="CanvasLayer"]
transform = Transform( 0.749372, -0.297454, 0.591576, 0, 0.893419, 0.449225, -0.662149, -0.336637, 0.669503, 11.2832, 12.1273, 14.0007 )
environment = SubResource( 1 )
script = ExtResource( 8 )

[node name="CameraImage" type="InterpolatedCamera" parent="CanvasLayer/Camera1"]
transform = Transform( 0.755745, -0.654001, -0.0336592, -0.319224, -0.323034, -0.890924, 0.571792, 0.684056, -0.452904, 0.720079, -4.41077, -22.0748 )
environment = SubResource( 2 )
fov = 76.8741

[node name="Ball" parent="CanvasLayer" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
script = ExtResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="CanvasLayer"]
transform = Transform( 1, 0, 0, 0, 0.82896, 0.559309, 0, -0.559309, 0.82896, 0, 12.8218, 26.033 )

[node name="DirectionalLight2" type="DirectionalLight" parent="CanvasLayer"]
transform = Transform( 0.607653, 0.661435, 0.439614, 0, 0.553529, -0.83283, -0.794202, 0.506072, 0.336354, -0.703661, -9.79328, 14.3105 )

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
margin_left = 239.485
margin_top = 554.502
margin_right = 489.485
margin_bottom = 583.502

[node name="infoText" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 249.21
margin_top = 500.167
margin_right = 569.21
margin_bottom = 526.167
custom_fonts/font = SubResource( 3 )
text = "Press C  to switch camera"
align = 1

[node name="portText" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 253.08
margin_top = 526.995
margin_right = 573.08
margin_bottom = 552.995
custom_fonts/font = SubResource( 3 )
align = 1
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_connect_button_pressed"]
[connection signal="request_completed" from="CanvasLayer/HTTPRequest" to="CanvasLayer" method="_on_HTTPRequest_request_completed"]
